--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   win10:
-    runs-on: windows:
+    runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
       - uses: msys2/setup-msys2@v2
