--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
           update: true
       - name: Build ttyd
         shell: msys2 {0}
-        run: ./scripts/mingw-build.sh
+        run: pwd && ./scripts/mingw-build.sh
       - uses: actions/upload-artifact@v2
         with:
           name: ttyd.win10
