--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,15 @@ jobs:
           update: true
       - name: Build ttyd
         shell: msys2 {0}
-        run: ls -l && ./scripts/mingw-build.sh
+        run: |
+            pacman -S git binutils
+            pacman -S mingw-w64-i686-cmake
+            cd ./msys2/json-c
+            makepkg -s && pacman -U *.pkg.tar.xz
+            cd ../libwebsockets
+            makepkg -s && pacman -U *.pkg.tar.xz
+            cd ../ttyd
+            makepkg --skipchecksums
       - uses: actions/upload-artifact@v2
         with:
           name: ttyd.win10
