--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,12 +31,13 @@ jobs:
             mingw64/mingw-w64-x86_64-libuv
             mingw64/mingw-w64-x86_64-mbedtls
             mingw64/mingw-w64-x86_64-json-c
+            mingw64/mingw-w64-i686-cmake
+            git 
+            binutils
           update: true
       - name: Build ttyd
         shell: msys2 {0}
         run: |
-            pacman -Sy git binutils
-            pacman -Sy mingw-w64-i686-cmake
             cd ./msys2/json-c
             makepkg -s && pacman -U *.pkg.tar.xz
             cd ../libwebsockets
