--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,17 +31,14 @@ jobs:
             mingw64/mingw-w64-x86_64-libuv
             mingw64/mingw-w64-x86_64-mbedtls
             mingw64/mingw-w64-x86_64-json-c
+            mingw64/mingw-w64-x86_64-libwebsockets
             git 
             binutils
           update: true
       - name: Build ttyd
         shell: msys2 {0}
         run: |
-            cd ./msys2/json-c
-            makepkg -s && pacman -U *.pkg.tar.xz
-            cd ../libwebsockets
-            makepkg -s && pacman -U *.pkg.tar.xz
-            cd ../ttyd
+            cd ./msys2/ttyd
             makepkg --skipchecksums
       - uses: actions/upload-artifact@v2
         with:
