--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,7 @@ jobs:
             sed -i "s/'cmake'/mingw-w64-x86_64-cmake/g" PKGBUILD
             sed -i "s/'json-c'/mingw-w64-x86_64-json-c/g" PKGBUILD
             sed -i "s/'libwebsockets'/mingw-w64-x86_64-libwebsockets/g" PKGBUILD
-            makepkg -sCLfc --noconfirm --noprogressbar --skipchecksums
+            makepkg --noconfirm --noprogressbar --skipchecksums
       - uses: actions/upload-artifact@v2
         with:
           name: ttyd.win10
