--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,7 @@ jobs:
             sed -i "s/'json-c'/mingw-w64-x86_64-json-c/g" PKGBUILD
             sed -i "s/'libwebsockets'/mingw-w64-x86_64-libwebsockets/g" PKGBUILD
             sed -i "s/'vim'//g" PKGBUILD
-            sed -i 's/cmake /-G "Unix Makefiles"/g' PKGBUILD
+            sed -i 's/cmake /cmake -G "Unix Makefiles"/g' PKGBUILD
             makepkg --noconfirm --noprogressbar --skipchecksums
       - uses: actions/upload-artifact@v2
         with:
