--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,12 +41,12 @@ jobs:
         shell: msys2 {0}
         run: |
             cd ./msys2/ttyd
-            sed -i "s/'gcc'/mingw-w64-x86_64-gcc/g" PKGBUILD
-            sed -i "s/'cmake'/mingw-w64-x86_64-cmake/g" PKGBUILD
-            sed -i "s/'json-c'/mingw-w64-x86_64-json-c/g" PKGBUILD
-            sed -i "s/'libwebsockets'/mingw-w64-x86_64-libwebsockets/g" PKGBUILD
+            sed -i "s/'gcc'/'mingw-w64-x86_64-gcc'/g" PKGBUILD
+            sed -i "s/'cmake'/'mingw-w64-x86_64-cmake'/g" PKGBUILD
+            sed -i "s/'json-c'/'mingw-w64-x86_64-json-c'/g" PKGBUILD
+            sed -i "s/'libwebsockets'/'mingw-w64-x86_64-libwebsockets'/g" PKGBUILD
             sed -i "s/'vim'//g" PKGBUILD
-            sed -i 's/cmake /cmake -G "Unix Makefiles"/g' PKGBUILD
+            sed -i 's/cmake\s+/cmake -G "Unix Makefiles" /g' PKGBUILD
             makepkg --noconfirm --noprogressbar --skipchecksums
       - uses: actions/upload-artifact@v2
         with:
