--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,6 +47,7 @@ jobs:
             sed -i "s/'libwebsockets'/'mingw-w64-x86_64-libwebsockets'/g" PKGBUILD
             sed -i "s/'vim'//g" PKGBUILD
             sed -i 's/cmake /cmake -G "Unix Makefiles" /g' PKGBUILD
+            sed -i 's/  make/  cat makefile && make/g' PKGBUILD
             cat PKGBUILD
             makepkg --noconfirm --noprogressbar --skipchecksums
       - uses: actions/upload-artifact@v2
