--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,9 +46,8 @@ jobs:
             sed -i "s/'cmake'/'mingw-w64-x86_64-cmake'/g" PKGBUILD
             sed -i "s/'json-c'/'mingw-w64-x86_64-json-c'/g" PKGBUILD
             sed -i "s/'libwebsockets'/'mingw-w64-x86_64-libwebsockets'/g" PKGBUILD
-            sed -i 's/cmake /cmake -G "Unix Makefiles" /g' PKGBUILD
+            sed -i 's/cmake /cmake -G "MSYS Makefiles" /g' PKGBUILD
             sed -i 's/  make/  cat makefile \&\& make/g' PKGBUILD
-            cat PKGBUILD
             makepkg --noconfirm --noprogressbar --skipchecksums
       - uses: actions/upload-artifact@v2
         with:
