--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
             sed -i "s/'json-c'/'mingw-w64-x86_64-json-c'/g" PKGBUILD
             sed -i "s/'libwebsockets'/'mingw-w64-x86_64-libwebsockets'/g" PKGBUILD
             sed -i 's/cmake /cmake -G "MSYS Makefiles" -DCMAKE_EXE_LINKER_FLAGS="-static -no-pie -Wl,-s -Wl,-Bsymbolic -Wl,--gc-sections" /g' PKGBUILD
-            sed -i 's/  make/  cat makefile \&\& make/g' PKGBUILD
+            cat PKGBUILD
             makepkg --noconfirm --noprogressbar --skipchecksums
       - uses: actions/upload-artifact@v2
         with:
